[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/theme/kenneyUI-blue.tres" type="Theme" id=1]
[ext_resource path="res://ui/editormenu/GameMaker.gd" type="Script" id=2]
[ext_resource path="res://ui/DefaultBackground.tscn" type="PackedScene" id=3]

[node name="GameMaker" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -190.0
margin_right = 320.0
margin_bottom = 190.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefaultBackground" parent="." instance=ExtResource( 3 )]

[node name="Art" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -21.1255
margin_right = 84.0
margin_bottom = 21.1255
text = "Make ARt"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 88.0
margin_top = 82.0
margin_right = 253.324
margin_bottom = 124.251
text = "Make Sound"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = 74.0
margin_right = -90.6759
margin_bottom = 116.251
text = "Make Music"

[node name="Levels" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -126.0
margin_right = 85.3241
margin_bottom = -83.749
text = "Make Levels"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Art" to="." method="_on_Art_pressed"]
[connection signal="pressed" from="Sound" to="." method="_on_Sound_pressed"]
[connection signal="pressed" from="Levels" to="." method="_on_Levels_pressed"]
